fix(grid): fix filter menu double border

--- a/packages/default/scss/grid/_layout.scss
+++ b/packages/default/scss/grid/_layout.scss
@@ -983,4 +983,13 @@
         }
     }
 
+    .k-grid-filter-popup {
+        border: 0;
+        padding: 0;
+
+        .k-filter-menu {
+            padding: 0;
+        }
+    }
+
 }
